--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>	
 <meta charset="utf-8">
-<title>佐原観光検索</title>
+<title>佐原ナビ</title>
 <meta name="description" content="サイトの概要を記載">
 <link rel="stylesheet" href="style.css">
 
